# CytoPert

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.zh-CN.md  pyproject.toml
cytopert/: __init__.py
cytopert/agent/: __init__.py  context.py  context_compressor.py  context_engine.py  loop.py  reflection.py  trajectory.py
cytopert/agent/tools/: __init__.py  base.py  census.py  chain_status.py  chains.py  decoupler_tools.py  evidence.py  evidence_search.py  pathway.py  pathway_lookup.py  pertpy_tools.py  registry.py  scanpy_tools.py
cytopert/cli/: __init__.py  commands.py  doctor.py  interactive.py  interactive_slash.py  profiles.py  setup_wizard.py
cytopert/config/: __init__.py  loader.py  schema.py
cytopert/data/: __init__.py  census_client.py  evidence_builder.py  models.py
cytopert/knowledge/: __init__.py  pathway.py  pathways.py  topology.py
cytopert/memory/: __init__.py  store.py  tool.py
cytopert/persistence/: __init__.py  chain_db.py  evidence_db.py  schema.py
cytopert/plugins/: __init__.py  manager.py
cytopert/providers/: __init__.py  base.py  litellm_provider.py  prompt_caching.py
cytopert/scheduler/: __init__.py  cron.py
cytopert/session/: __init__.py  manager.py
cytopert/skills/: __init__.py  hub.py  manager.py  tool.py
cytopert/skills/bundled/: __init__.py
cytopert/skills/bundled/pipelines/census-tissue-slice/: SKILL.md
cytopert/skills/bundled/pipelines/perturbation-de/: SKILL.md
cytopert/skills/bundled/reasoning/mechanism-chain-from-de/: SKILL.md
cytopert/utils/: __init__.py  helpers.py
cytopert/workflow/: __init__.py  pipeline.py
cytopert/workflow/scenarios/: __init__.py  generic_de.py  nfatc1_mammary.py
docs/: README.md  example_config.json  hermes-borrowing.md  overview.md  quickstart.md  tools.md  troubleshooting.md  workflows.md
references/hermes/: README.md
scripts/: check_no_chinese.py
tests/: __init__.py  test_basic.py  test_chitchat_passthrough.py  test_cli_commands.py  test_config_get_set.py  test_context.py  test_context_compressor.py  test_cron.py  test_doctor.py  test_evidence_binding.py  test_evidence_gate.py  test_extract_filter_cn.py  test_generic_de_prompt.py  test_interactive_shell.py  test_interrupt.py  test_loop_integration.py  test_memory.py  test_persistence.py  test_plan_gate.py  test_plugin_manager.py  test_profiles.py  test_prompt_caching.py  test_reflection.py  test_setup_wizard.py  test_skills.py  test_skills_hub.py  test_tool_registry.py  test_trajectory.py
tests/manual/: run_deepseek_live.py
