[project]
name = "cytopert"
version = "0.1.0"
description = "Interactive framework for cell perturbation differential response mechanism parsing"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "CytoPert contributors"}]
keywords = ["single-cell", "perturbation", "mechanism", "llm", "scverse"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "anndata>=0.10.0",
    "scanpy>=1.9.0",
    "cellxgene-census>=1.0.0",
    "tiledbsoma>=1.0.0",
    "pertpy>=0.8.0",
    "decoupler>=1.6.0",
    "httpx>=0.25.0",
    "loguru>=0.7.0",
    "rich>=13.0.0",
    "litellm>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
cytopert = "cytopert.cli.commands:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cytopert"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
