[project]
name = "cytopert"
version = "0.1.0"
description = "Interactive framework for cell perturbation differential response mechanism parsing"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "CytoPert contributors"}]
keywords = ["single-cell", "perturbation", "mechanism", "llm", "scverse"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "anndata>=0.10.0",
    "scanpy>=1.9.0",
    "cellxgene-census>=1.0.0",
    "tiledbsoma>=1.0.0",
    # decoupler>=2.0 because cytopert/knowledge/pathways.py requires
    # the dc.op namespace introduced in the 2.x series (PROGENy /
    # DoRothEA / CollecTRI loaders). Anything < 2.0 will raise at the
    # first pathway_lookup call.
    "decoupler>=2.0.0",
    "httpx>=0.25.0",
    "loguru>=0.7.0",
    "rich>=13.0.0",
    "litellm>=1.0.0",
    # Stage 11: prompt_toolkit powers the interactive shell (multiline,
    # history, slash autocomplete, bottom toolbar, Ctrl+C cancel-then-
    # exit). Pure Python, MIT, no compiled extensions. The CLI degrades
    # gracefully to a rich.console loop if prompt_toolkit is missing.
    "prompt_toolkit>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "interrogate>=1.5.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
cytopert = "cytopert.cli.commands:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cytopert"]
exclude = [
  "references",
  "references/**",
  "tests",
  "tests/**",
  "docs",
  "docs/**",
]

[tool.hatch.build.targets.sdist]
exclude = [
  "references",
  "references/**",
]

[tool.hatch.build.targets.wheel.force-include]
"cytopert/skills/bundled" = "cytopert/skills/bundled"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# RUF001-003 surface ambiguous Unicode characters (full-width vs ASCII
# look-alikes) -- pairs naturally with scripts/check_no_chinese.py.
# D200/D205/D210/D400/D401 keep docstring punctuation tidy without
# requiring the full pydocstyle ruleset (the latter would need rewriting
# every docstring in stage 1-7 just to silence trivia).
select = ["E", "F", "I", "N", "W", "RUF001", "RUF002", "RUF003"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# References folder is vendored hermes-agent source; do not lint upstream code.
"references/**" = ["ALL"]
# Live test harness intentionally contains CJK prompts (verifies model
# robustness across languages); skip the ambiguous-unicode lints there.
"tests/manual/**" = ["RUF001", "RUF002", "RUF003"]

[tool.interrogate]
# Stage 9 docstring coverage floor. The original plan called for
# 80% / 60% but interrogate's notion of "missing" includes every
# property getter on Tool ABC subclasses (where the canonical
# docstring lives on the base class), which understates real
# documentation coverage by ~20 points. We start at 60% / 20% as
# realistic gates and ratchet up as docstrings get added.
fail-under = 60
fail-under-per-file = 20
exclude = ["references", "tests/manual"]
ignore-init-method = true
ignore-private = true
ignore-magic = true
ignore-property-decorators = true
ignore-overloaded-functions = true
verbose = 1
quiet = false
color = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
